fix date layout bug

--- a/style.scss
+++ b/style.scss
@@ -17,10 +17,6 @@
 
 html{
   font-size: 100%;
-
-    /* This image will be displayed fullscreen */
-    background:url('assets/images/background.jpg') no-repeat center center;
-
     /* Ensure the html element always takes up the full height of the browser window */
     min-height:100%;
 
@@ -40,7 +36,6 @@ body {
   max-width: 1100px;
   padding: 40px 100px;
   width: 100%;
-  /*background:url(assets/images/background.png);*/
   background-color:rgba(255,255,255,.8);
   -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#66FFFFFF,endColorstr=#66FFFFFF);/*IE fix */
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#66FFFFFF,endColorstr=#66FFFFFF);     /* IE Fix */
@@ -167,7 +162,6 @@ img {
 //
 
 .wrapper-masthead {
-  /*background-image: url(assets/images/background.png);*/
   margin-bottom: 20px;
   background-color:rgba(255,255,255,.8);
   -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#66FFFFFF,endColorstr=#66FFFFFF);/*IE fix */
@@ -266,10 +260,7 @@ nav {
 //
 
 .entry {
-  /*background: $white;*/
-  /*border: 1px solid;*/
-  height: 200px;
-  /*width: 100%;*/
+  height: 100%;
   padding: 10px 10px;
 }
 
@@ -294,7 +285,6 @@ nav {
 .entry img{
   max-height: 85%;
   max-width: 85%;
-  /*padding: 10% 5%;*/
 }
 
 .intro {
